6.app/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-forecast
  namespace: openfaas
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/function/$1"
spec:
  # ingressClassName: nginx
  rules:
  - host: miniostatic.100.96.192.102.nip.io
    http:
      paths:
      - path: /api/(get-forecast)
        pathType: Prefix
        backend:
          service:
            name: gateway
            port: 
              number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpleapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/static-site/$1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/?$ /static-site/index.html break;
spec:
  # ingressClassName: nginx
  rules:
  - host: miniostatic.100.96.192.102.nip.io
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: my-minio
            port: 
              number: 9000
